# NL2UniProt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
config/deploy/: config.yml
config/dual_encoder/: esm_bert_config.yml  esm_bert_config_ddp.yml  faesm_bert_config.yml
docs/: contribute_guide.md
docs/source/: conf.py  index.rst  results.rst  usage.rst
examples/: api_use.ipynb  data_preprocess.ipynb
scripts/installation/: download.py  install_dependencies.sh
scripts/post_training/: compute_seq_embedding.py  compute_topk.py
scripts/pre_training/: description.py
scripts/train/: main.py  run.py  torchrun.py
src/nl2prot/api/: __init__.py  nl2prot_api.py
src/nl2prot/data/: collate.py  dataset.py  generate_description.py  utils.py
src/nl2prot/models/: base_model.py  esm_bert.py  faesm_bert.py
src/nl2prot/modules/: evaluator.py  loss.py  misc.py  scheduler.py
src/nl2prot/template/: load_module.py  module_configs.py
src/nl2prot/trainer/: base_trainer.py  clip_trainer.py  ddp_clip_trainer.py  dual_encoder_pl.py
src/nl2prot/validate/: embedding.py
